--- a/.travis.yml
+++ b/.travis.yml
@@ -9,10 +9,16 @@ python:
   - "nightly"
 
 install:
+  - pip install -r requirements.txt
   - pip install tox-travis
 
 script:
   - tox
+  - coverage run -m pytest
+  - coverage report -m
+
+after_success:
+  - coveralls
 
 cache:
   - pip
