--- a/tox.ini
+++ b/tox.ini
@@ -2,10 +2,10 @@
 envlist = py{27,33,34,35,36}
 
 [testenv]
-deps =
-    pytest
-    lowest: flask==0.12.2
-    lowest: flask-sqlalchemy==2.2
-
+passenv = TRAVIS TRAVIS_*
+deps = pipenv
 commands =
-    pytest
+    pipenv install --dev --ignore-pipfile
+    coverage run --source flask_sqla2api -m pytest
+    coverage report -m
+    coveralls
