--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,7 @@ envlist = py{27,33,34,35,36}
 passenv = TRAVIS TRAVIS_*
 deps = pipenv
 commands =
-    pipenv install --dev --ignore-pipfile
+    pipenv install --dev --skip-lock
     coverage run --source flask_sqla2api -m pytest
     coverage report -m
     coveralls
